--- a/app/templates/index.handlebars
+++ b/app/templates/index.handlebars
@@ -1,68 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	{{>icons}}
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/app.css">
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic' rel='stylesheet' type='text/css'>
+	<base href="http://www.lookatme.ru">
 </head>
 <body>
-
-	<svg display="none" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-		<defs>
-			<symbol id="icon_views" viewBox="0 0 14 10">
-				<title>Views</title>
-				<path fill-rule="evenodd" clip-rule="evenodd" d="M7,10c-2.7,0-5.5-2.6-7-5c1.5-2.4,4.3-5,7-5c2.7,0,5.5,2.7,7,5 C12.5,7.4,9.7,10,7,10z M7,2C5.3,2,4,3.3,4,5c0,1.7,1.3,3,3,3c1.7,0,3-1.3,3-3C10,3.3,8.6,2,7,2z M7,6C6.4,6,6,5.6,6,5 c0-0.6,0.4-1,1-1s1,0.4,1,1C8,5.6,7.6,6,7,6z">
-				</path>
-			</symbol>
-			<symbol id="icon_comments" viewBox="0 0 11 11">
-			<title>Comments</title>
-			<path d="M3,10.9l0-4H0V0h11v7H7L3,10.9z"></path>
-		</symbol>
-		</defs>
-	</svg>
-	<div class="post-preview">
-		<a class="main-ref" href="http://www.lockatme.ru/mag/live/opinion/218377-just-once-i-want-to-feel-something"></a>
-		<img class="post-preview__img" src="http://lamcdn.net/lookatme.ru/post-cover/lDt9V4mW-c_PyFrq-iDECA-default.jpg" alt="«Пробуждение силы»: почему всем надо выдохнуть и успокоиться">
-
-		<a class="post-preview__category" href="http://www.lockatme.ru/mag/live/opinion">
-			Мнение
+	<!-- Main-menu -->
+	<div class="header">
+		<!-- Logo -->
+		<a class="header__logo" href="../" title="Look At Me">
+			Look At Me
 		</a>
-		<div class="post-preview__title">
-			«Пробуждение cилы»:
-			почему всем надо
-			выдохнуть и успокоиться
-			</div>
-		<div class="post-preview__text">
-			Седьмой эпизод «Звездных войн» и постоянный восторг
-		</div>
-		<div class="post-preview__container">
-			<span class="post-preview__author">
-				Гриша Пророков,
-			</span>
-			<span class="post-preview__date">
-				21 Декабря 2015
-			</span>
-			<span class="post-preview__views">
-				<svg class="icon icon-views">
-					<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon_views">
-					</use>
-				</svg>
-				19777
-			</span>
-			<span class="post-preview__comments">
-				<a href="http://www.lockatme.ru/mag/live/opinion/218377-just-once-i-want-to-feel-something#comments">
-					<svg class="icon icon-comments">
-						<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon_comments">
+		<!-- Topics -->
+		<ul class="header__nav">
+			<!-- Broadcast -->
+			<li class="header__broadcast">
+				<a href="/mag/live">
+					Эфир
+				</a>
+			</li>
+			<!-- People -->
+			<li class="header__people">
+				<a href="/mag/people">
+					Герои
+				</a>
+			</li>
+			<!-- Magazine -->
+			<li class="header__magazine">
+				<a href="/mag/magazine">
+					Журнал
+				</a>
+			</li>
+			<!-- How-to -->
+			<li class="header__how-to">
+				<a href="/mag/how-to">
+					Советы
+				</a>
+			</li>
+			<!-- Blogs -->
+			<li class="header__blogs">
+			<a <a href="/mag/blogs">
+				Блоги
+			</a>
+			</li>
+		</ul>
+		<!-- Search -->
+		<div class="header__search">
+			<form action="http://www.lookatme.ru/search">
+				<input type="text" name="query" class="query">
+				<button class="submit" type="submit">
+					<svg class="icon icon-search">
+						<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon_search">
 						</use>
 					</svg>
-					16
-				</a>
-			</span>
+				</button>
+			</form>
+		</div>
+		<!-- Login -->
+		<ul class="header__profile">
+			<li>
+				<a href="#login">Вход</a>
+			</li>
+			<li>
+				<a href="#signup">Регистрация</a>
+			</li>
+		</ul>
+		<!-- Services -->
+		<div class="header__services">
+			<!-- News -->
+			<a class="header__service-news" href="/news">
+				Новости
+			</a>
+			<!-- Talks -->
+			<a class="header__service-talks" href="/talks">
+				Сообщество
+			</a>
 		</div>
 	</div>
 
-	<script src="js/plugins.min.js"></script>
-	<script src="js/app.js"></script>
 </body>
 </html>
