--- a/app/templates/index.handlebars
+++ b/app/templates/index.handlebars
@@ -13,7 +13,7 @@
 	<div class="header">
 		<!-- Logo -->
 		<a class="header__logo" href="../" title="Look At Me">
-			Look At Me
+			Look At Meу
 		</a>
 		<!-- Topics -->
 		<ul class="header__nav">
@@ -50,9 +50,9 @@
 		</ul>
 		<!-- Search -->
 		<div class="header__search">
-			<form action="http://www.lookatme.ru/search">
+			<form action="/search">
 				<input type="text" name="query" class="query">
-				<button class="submit" type="submit">
+				<button class="header__submit" type="submit">
 					<svg class="icon icon-search">
 						<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon_search">
 						</use>
@@ -63,10 +63,10 @@
 		<!-- Login -->
 		<ul class="header__profile">
 			<li>
-				<a href="#login">Вход</a>
+				<a class="header__profile-login" href="#login">Вход</a>
 			</li>
 			<li>
-				<a href="#signup">Регистрация</a>
+				<a class="header__profile-signup" href="#signup">Регистрация</a>
 			</li>
 		</ul>
 		<!-- Services -->
