--- a/app/templates/index.handlebars
+++ b/app/templates/index.handlebars
@@ -13,7 +13,7 @@
 	<div class="header">
 		<!-- Logo -->
 		<a class="header__logo" href="../" title="Look At Me">
-			Look At Meу
+			Look At Me
 		</a>
 		<!-- Topics -->
 		<ul class="header__nav">
@@ -51,7 +51,7 @@
 		<!-- Search -->
 		<div class="header__search">
 			<form action="/search">
-				<input type="text" name="query" class="query">
+				<input type="text" name="query">
 				<button class="header__submit" type="submit">
 					<svg class="icon icon-search">
 						<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon_search">
@@ -72,15 +72,14 @@
 		<!-- Services -->
 		<div class="header__services">
 			<!-- News -->
-			<a class="header__service-news" href="/news">
+			<a class="header__news" href="/news">
 				Новости
 			</a>
 			<!-- Talks -->
-			<a class="header__service-talks" href="/talks">
+			<a class="header__talks" href="/talks">
 				Сообщество
 			</a>
 		</div>
 	</div>
-
 </body>
 </html>
