--- a/app/templates/partials/icons.handlebars
+++ b/app/templates/partials/icons.handlebars
@@ -6,8 +6,12 @@
 			</path>
 		</symbol>
 		<symbol id="icon_comments" viewBox="0 0 11 11">
-		<title>Comments</title>
-		<path d="M3,10.9l0-4H0V0h11v7H7L3,10.9z"></path>
-	</symbol>
+			<title>Comments</title>
+			<path d="M3,10.9l0-4H0V0h11v7H7L3,10.9z"></path>
+		</symbol>
+		<symbol id="icon_search" viewBox="0 0 13 13">
+			<title>Search</title>
+			<path d="M10.2,8.9l2.8,2.8L11.7,13l-2.8-2.8c-0.9,0.7-2.1,1-3.2,1c-1.5,0-2.9-0.6-4-1.6C0.6,8.5,0,7.1,0,5.6s0.6-2.9,1.6-4 C2.7,0.6,4.1,0,5.6,0c1.5,0,2.9,0.6,4,1.7c1,1,1.5,2.2,1.6,3.5C11.3,6.5,11,7.8,10.2,8.9z M3,8.3C3.7,9,4.6,9.3,5.6,9.3 S7.5,9,8.2,8.3C9,7.5,9.3,6.6,9.3,5.6S9,3.7,8.2,3C7.5,2.3,6.6,1.9,5.6,1.9C4.6,1.9,3.7,2.3,3,3C2.3,3.7,1.9,4.6,1.9,5.6 C1.9,6.6,2.3,7.5,3,8.3z"></path>
+		</symbol>
 	</defs>
 </svg>
