--- a/app/less/header.less
+++ b/app/less/header.less
@@ -78,7 +78,7 @@
 			border: 1px solid #c6c6c6;
 			border-radius: 14px;
 			color: #2a2a2a;
-			// opacity: 0;
+			opacity: 0;
 			transition: opacity 0.1s;
 			outline: none;
 			&:hover{
