Styles for header

--- a/app/less/header.less
+++ b/app/less/header.less
@@ -128,19 +128,19 @@
 		}
 	}
 	&__services{
+		position: absolute;
 		display: inline-block;
-		float: right;
 		text-transform: uppercase;
 		font: bold 12px/1 "Proxima Nova", "Arial", sans-serif;
-		margin-top: -17px;
+		right: 400px;
+		top: 98px;
 	}
 	&__news{
 		color: #C0C0C0;
-		padding-right: 22px;
+		margin-right: 22px;
 	}
 	&__talks{
 		color: #C0C0C0;
-		padding-right: 22px;
 	}
 }
 
