article and main menu fix

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -1,5 +1,9 @@
 @import 'layout';
-@import 'post-preview';
 @import 'icons';
-@import 'header';
+@import 'post-preview';
+@import 'main-menu';
 @import 'article';
+@import 'logo';
+@import 'search';
+@import 'profile';
+@import 'services';
