--- a/app/less/article.less
+++ b/app/less/article.less
@@ -24,12 +24,11 @@ body{
 	&__note{
 		position: absolute;
 		right: 214px;
-		top: 647px;
-		background: #fff;
+		top: 660px;
 		width: 300px;
-		height: 10px;
 		font-size: 22px;
-		line-height: 1.4;
+		line-height: 1.1;
+		border-top: 10px solid #fff;
 	}
 	p{
 		margin-bottom: 20px;
